--- a/client/src/styles/Summary.css
+++ b/client/src/styles/Summary.css
@@ -17,15 +17,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
   gap: 0.2rem;
   color: var(--text);
-  height: 32px;
 }
 
 .summary-widget-header h2 {
   margin: 0;
-  font-size: 18px;
 }
 
 .summary-widget-data {
@@ -128,13 +125,11 @@
 
 @media screen and (max-width: 1024px) {
   .summary-widget {
-    min-height: 200px;
-    max-height: 300px;
+    min-height: 180px;
+    max-height: 250px;
   }
 
-  .summary-widget-header h2 {
-    font-size: 16px;
-  }
+
 
   .summary-widget-chart {
     width: 40%;
